5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1670_2967.log
== TEST (2019-04-16 18:24:42) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if==>"sim"
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if==>"sim"
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:37) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if==>1.37
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if==>1.37
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:15) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if altura==>1.37
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if altura==>1.37
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:31) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if (altura==>1.37)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if (altura==>1.37)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:32) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if (altura==>1.37)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if (altura==>1.37)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:37) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if (altura=>1.37)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if (altura=>1.37)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:41) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if (altura==1.37)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if (altura==1.37)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:48) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if (altura>==1.37)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if (altura>==1.37)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:32) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if (altura,altdoamg>==1.37)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if (altura,altdoamg>==1.37)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:33) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if (altura,altdoamg>==1.37)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if (altura,altdoamg>==1.37)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:33) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if (altura,altdoamg>==1.37)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if (altura,altdoamg>==1.37)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:34) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if (altura,altdoamg>==1.37)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if (altura,altdoamg>==1.37)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:34) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if (altura,altdoamg>==1.37)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if (altura,altdoamg>==1.37)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:41) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if(altura,altdoamg>==1.37)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if(altura,altdoamg>==1.37)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:26) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if altura,altdoamg>==(1.37)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if altura,altdoamg>==(1.37)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:32) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if altdoamg>==(1.37)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if altdoamg>==(1.37)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:42) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if altdoamg>==(1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if altdoamg>==(1.37):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:43) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if altdoamg>==(1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if altdoamg>==(1.37):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:45) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if altdoamg>==(1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if altdoamg>==(1.37):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:45) 
-- CODE:
altura=float("diga a altura:")
altdoamg=float("diga a altura do amigo:")
if altdoamg>==(1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 3
    if altdoamg>==(1.37):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:29:41) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if altdoamg>==(1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:29:42) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if altdoamg>==(1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:29:42) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if altdoamg>==(1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:29:55) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altdoamg>==1.37:)
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:30:49) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>==1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:30:49) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>==1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:30:50) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>==1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:30:50) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>==1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:32:17) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>==1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:32:18) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>==1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:32:18) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>==1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:32:19) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>==1.37):
print("sim")
else:
print("nao")
-- EXECUTION TIME:
0.121785
-- ERROR:
  File "/home/codebench/codes/1670/2967/main.py", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:33:13) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>==1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:33:13) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>==1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:33:14) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>==1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:33:25) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:33:38) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:33:48) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>1.37)
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:33:54) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if: (altura,altdoamg>1.37)
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:33:54) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if: (altura,altdoamg>1.37)
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:33:55) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if: (altura,altdoamg>1.37)
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:38) 
-- CODE:
altura=float(input("diga a altura:")
altdoamg=float(input("diga a altura do amigo:")
if (altura,altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:56) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:57) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:57) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:11) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:11) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:12) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:12) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:12) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:12) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:31) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:32) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:32) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:33) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:33) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:33) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:37) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:37) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:37) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg>=1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:51) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg >= 1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:56) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg == 1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:56) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg == 1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:57) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg == 1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:58) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg == 1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:58) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg == 1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:36:59) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg == 1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:44) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg > 1.37):
print("sim",altura)
else:
print("nao",altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:06) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg > 1.37):
print("sim")
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:28) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:29) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:30) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:42) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:43) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:43) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:08) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:09) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:09) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:13) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:14) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:15) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:19) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:20) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:21) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:21) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:21) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:21) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:21) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:21) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:46:22) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- EXECUTION TIME:
0.185838
-- ERROR:
  File "/home/codebench/codes/1670/2967/main.py", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:46:22) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- EXECUTION TIME:
0.158824
-- ERROR:
  File "/home/codebench/codes/1670/2967/main.py", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:46:22) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- EXECUTION TIME:
0.215195
-- ERROR:
  File "/home/codebench/codes/1670/2967/main.py", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:46:23) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- EXECUTION TIME:
0.176733
-- ERROR:
  File "/home/codebench/codes/1670/2967/main.py", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:46:23) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(altura)
else:
print("nao")
print(altura)
-- EXECUTION TIME:
0.123332
-- ERROR:
  File "/home/codebench/codes/1670/2967/main.py", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:39) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if (altura,altdoamg > 1.37):
print("sim")
print(<altura)
else:
print("nao")
print(<altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:05) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if altura,altdoamg > 1.37:
print("sim")
print(<altura)
else:
print("nao")
print(<altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:05) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if altura,altdoamg > 1.37:
print("sim")
print(<altura)
else:
print("nao")
print(<altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:06) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if altura,altdoamg > 1.37:
print("sim")
print(<altura)
else:
print("nao")
print(<altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:06) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if altura,altdoamg > 1.37:
print("sim")
print(<altura)
else:
print("nao")
print(<altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:07) 
-- CODE:
altura=float(input("diga a altura")
altdoamg=float(input("diga a altura do amigo")
if altura,altdoamg > 1.37:
print("sim")
print(<altura)
else:
print("nao")
print(<altura)
-- ERROR:
File "XXXX", line 2
    altdoamg=float(input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
